Slowly add MUDEventPipeline